syntax = "proto3";
package bff;

import "bff/bcommon.proto";

option go_package = "bff/;bffpb";

message C2SGetLeaderboard {
  int32 id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message LeaderboardEntry {
  int64 uid = 1;
  string nickname = 2;
  int32 score = 3;
  string avatar = 4;
  string country = 5;
  int32 star = 6; // 点赞数量
}

message SelfEntry {
  int32 rank = 1;
  int32 score = 2;
  string country = 3;
}
message S2CGetLeaderboard {
  repeated LeaderboardEntry entries = 1;
  SelfEntry self_entry = 2;
  int32 id = 3;
}

message C2SStarLeaderboard {
  int32 id = 1;
  int64 uid = 2;
}

message S2CStarLeaderboard {
  int32 id = 1;
  int64 uid = 2;
  int32 star = 3;
  Items rewards = 4;
}
